--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </div>
 
     <div class="tasks">
-        
-            <!--
-            <p>new item here</p>
+        <div class="item">
+            <div class="content">
+                <input type="text" class="edit-item" value="my task in here" readonly>
+            </div>
+            
             <div class="item-btn">
                 <i class="fa-sharp fa-solid fa-pen-to-square"></i>
+                <i class="fa-solid fa-check"></i>
                 <i class="fa-solid fa-rectangle-xmark"></i>
-
             </div>
         </div>
-            -->
-
     </div>
 </div>
 
